# opadron

./: .gitignore  .gitmodules  README.md  dot-bash_logout  dot-bash_profile  dot-bashrc  map-caps-to-esc.reg  mkhome  package-list  putty-config.reg
code/: CMakeLists.txt  LICENSE  c_buffer.c  c_buffer.h  goodbye.c  hello.c  id_allocator.c  id_allocator.h  mem_stack.c  mem_stack.h  opset.c  opset.h  platform.h  test_mem_stack.c  threading.c  threading.h  tic.c  tic.h  trie.c  trie.h  vector.c
code/array/: array_int.c
code/hash/: hash_int.c
code/tests/: CMakeLists.txt  c_buffer.c  id_allocator.c  mem_stack.c  tic.c  trie.c
code/threading/: pthreads.c
dot-bashrc.d/: aliases  autoload  commonlib  environment  prompt  tab_complete
dot-vim/: .VimballRecord  .netrwhist
home-skel/: LICENSE  dot-bashrc  dot-gitconfig  dot-screenrc  dot-solarize-dircolors  dot-tmux.conf  dot-vimrc  dot-xinitrc  link-dot-Xresources  link-dot-bashrc  link-dot-dircolors  link-dot-gitconfig  link-dot-screenrc  link-dot-tmux.conf  link-dot-vimrc  link-dot-ycm_extra_conf.py  mkhome
home-skel/EXTERNAL_LICENSES/: Docker.vim.md  ack.md
home-skel/desc-dot-aws/: credentials.asc
home-skel/desc-dot-ssh/: authorized_keys  config  known_hosts
home-skel/dot-bash-lib/: aliases  autoload  colors  commonlib  force_us_utf8_locale  gpg_agent  introspection  local_rc_file  solarize  solarize_dark  solarize_dircolors  solarize_light  solarize_off  tab_complete
home-skel/dot-bashrc.d/: aliases  autoload  colors  commonlib  disable_ixon  environment  force_us_utf8_locale  local_rc_file  prompt  (+5 more)
(+171 files in other folders)
